clusters/production/core/flux-system/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: flux-system
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`flux.${DOMAIN_INTERNAL}`)
      services:
        - kind: Service
          name: flux-operator
          namespace: flux-system
          port: 9080
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: optimizations
          namespace: traefik
        - name: error-pages
          namespace: traefik-errors
  tls:
    secretName: flux.${DOMAIN_INTERNAL}
